--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:build": "webpack --mode=production --config webpack.config.build.js",
-    "dev": "webpack-dev-server --mode=development --config webpack.config.js",
-    "delete": "rimraf dist"
+    "dev": "webpack-dev-server --mode=development --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
